add data Yale1A

--- a/tests/notebooks/Scripts/Stanford1A_source_Yale1A_target.ipynb
+++ b/tests/notebooks/Scripts/Stanford1A_source_Yale1A_target.ipynb
@@ -41,6 +41,9 @@
     "import seaborn as sns\n",
     "import time\n",
     "\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "import CytOpT.CytOpt as cytopt\n",
     "import CytOpT.plots as cplt"
    ]
@@ -134,7 +137,7 @@
    "id": "5fde5f3f",
    "metadata": {},
    "source": [
-    "### Cytop execute"
+    "### CytopT execute"
    ]
   },
   {
@@ -148,7 +151,7 @@
     "                         \"step\": 10, \"power\": 0.99, \"monitoring\": True, \"minMaxScaler\": True}\n",
     "\n",
     "\n",
-    "res = CytOpT(X_source, X_target, Lab_source,\n",
+    "res = cytopt.CytOpT(X_source, X_target, Lab_source,\n",
     "                 thetaTrue=pi_target, **parameters_cytopt)\n",
     "\n",
     "res"
